# github_inquirer

./: .gitignore  LICENSE  README.md  example.env  run.sh
agent/: langgraph.json  pyproject.toml
agent/github_inquirer/: agent.py  api.py  generate_query.py  github_results.py  model.py  summarise.py
gui/: package.json  tsconfig.json
gui/app/: layout.tsx  page.tsx
gui/app/api/copilotkit/: route.ts
gui/app/app/: page.tsx
gui/components/: card.tsx  logo.tsx
